feat: Endpoint find by id

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,3 +9,6 @@ Size.userRequest.email=O email do usu\u00E0rio deve ter entre {2} e {1} caract\u
 Size.userRequest.name=O nome do usu\u00E0rio deve ter entre {2} e {1} caract\u00E9res
 Email.userRequest=Informe um email v\u00E0lido para o usu\u00E0rio
 
+user.NotFound=O usu\u00E0rio identificador {0} n\u00E3o foi encontrado
+userController.id=Informe um identidicador de usu\u00E0rio v\u00E0lido
+
