--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -8,3 +8,5 @@ NotBlank.userRequest.name=Informe um nome para o usu\u00E0rio
 Size.userRequest.email=O email do usu\u00E0rio deve ter entre {2} e {1} caract\u00E9res
 Size.userRequest.name=O nome do usu\u00E0rio deve ter entre {2} e {1} caract\u00E9res
 Email.userRequest=Informe um email v\u00E0lido para o usu\u00E0rio
+
+user.NotFound=O usu\u00E0rio identificador {0} n\u00E3o foi encontrado
