decks and cards

--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -10,3 +10,17 @@ Size.userRequest.name=O nome do usu\u00E0rio deve ter entre {2} e {1} caract\u00
 Email.userRequest=Informe um email v\u00E0lido para o usu\u00E0rio
 
 user.NotFound=O usu\u00E0rio identificador {0} n\u00E3o foi encontrado
+userController.id=Informe um identidicador de usu\u00E0rio v\u00E0lido
+
+NotBlank.deckRequest.description=Informe uma descri\u00E7\u00E3o para o deck
+NotBlank.deckRequest.name=Informe um nome para o back
+Size.deckRequest.description=A descri\u00E7\u00E3o do deck deve ter entre {2} e {1} caract\u00E9res
+Size.deckRequest.name=O nome do deck deve ter entre {2} e {1} caract\u00E9res
+
+NotBlank.cardRequest.front=Informe a pergunta do card
+NotBlank.cardRequest.back=Informe a resposta esperada do card
+Size.cardRequest.front=A pergunta do card deve ter entre {2} e {1} caract\u00E9res
+Size.cardRequest.back=A resposta do card deve ter entre {2} e {1} caract\u00E9res
+
+deck.NotFound=O deck com identificador {0} n\u00E3o foi encontrado
+deckController.id=Informe um identidicador de deck v\u00E0lido
