--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -19,10 +19,10 @@ Size.deckRequest.description=A descri\u00E7\u00E3o do deck deve ter entre {2} e 
 Size.deckRequest.name=O nome do deck deve ter entre {2} e {1} caract\u00E9res
 Size.deckRequest.cards=Um deck deve ter no m\u00EDnimo {2} cards
 
-NotBlank.cardRequest.front=Informe a pergunta do card
-NotBlank.cardRequest.back=Informe a resposta esperada do card
-Size.cardRequest.front=A pergunta do card deve ter entre {2} e {1} caract\u00E9res
-Size.cardRequest.back=A resposta do card deve ter entre {2} e {1} caract\u00E9res
+NotBlank.deckRequest.cards.front=Informe a pergunta do card
+NotBlank.deckRequest.cards.back=Informe a resposta esperada do card
+Size.deckRequest.cards.front=A pergunta do card deve ter entre {2} e {1} caract\u00E9res
+Size.deckRequest.cards.back=A resposta do card deve ter entre {2} e {1} caract\u00E9res
 
 deck.NotFound=O deck com identificador {0} n\u00E3o foi encontrado
 deckController.id=Informe um identidicador de deck v\u00E0lido
