--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -25,5 +25,8 @@ Size.cardRequest.back=A resposta do card deve ter entre {2} e {1} caract\u00E9re
 deck.NotFound=O deck com identificador {0} n\u00E3o foi encontrado
 deckController.id=Informe um identidicador de deck v\u00E0lido
 
-study.NotFound=O usu\u00E0rio {0} n\u00E3o tem nenhum estudo pendente para o deck {1}
+studyDeck.NotFound=O usu\u00E0rio {0} n\u00E3o tem nenhum estudo pendente para o deck {1}
 study.DeckInStudy=O usu\u00E0rio {0} j\u00E0 est\u00E0 estudando o deck {1}, termine o estudo iniciado para come\u00E7ar outro
+study.NotFound=O estudo com identificador {0} n\u00E3o foi encontrado
+studyQuestion.NotFound=O estudo {0} j\u00E0 foi concluido
+studyController.id=Informe um identificador de estudo v\u00E0lido
